# CppFun

./: CMakeLists.txt  README.md
cpp17/: CMakeLists.txt  std_any_cppreference.cpp
